--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a id="logo" class="navbar-brand js-scroll-trigger" href="#page-top">Cerrajería Agstín</a>
+            <a id="logo" class="navbar-brand js-scroll-trigger" href="#page-top">Cerrajería Agustín</a>
             <button class="navbar-toggler navbar-toggler-right" style="color: black;" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
